--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql": "^16.6.0",
     "next": "12.2.4",
     "normalize.css": "^8.0.1",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.6.0",
