--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.7.0",
+    "@coreui/react": "^4.7.0",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@faustwp/cli": "0.2.10",
