--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@emotion/styled": "^11.10.8",
     "@faustwp/cli": "0.2.10",
     "@faustwp/core": "0.2.11",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "@mui/material": "^5.12.2",
     "@mui/system": "^5.12.1",
     "classnames": "^2.3.1",
@@ -34,6 +36,7 @@
     "react-icons": "4.6.0",
     "react-responsive-carousel": "3.2.23",
     "sharp": "^0.31.3",
+    "tailwindcss": "^3.3.2",
     "use-debounce": "8.0.4"
   },
   "devDependencies": {
